--- a/src/components/game/BoardHolder.css
+++ b/src/components/game/BoardHolder.css
@@ -27,3 +27,54 @@ tr, td {
   padding: 0.25em;
   border: inherit; /* disabled by default */
 }
+
+.cell-btn {
+  background: var(--btn-color);
+  padding: 0.4em;
+  width: 3em;
+  height: 3em;
+  border: none;
+  border-radius: 0.5em;
+  margin: 0.2em;
+    text-align: center;
+}
+
+.cell-btn:disabled {
+  background: var(--btn-disabled-color);
+}
+
+.cell-btn.active {
+  background: var(--btn-active-color);
+}
+
+.cell-btn.active:hover {
+  background: var(--btn-active-accent);
+
+}
+
+.cell-grid-small {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  width: 100%;
+  height: 100%;
+}
+
+.cell-num-small {
+  background-color: inherit;
+  font-size: 0.8em;
+  font-weight: 500;
+}
+.cell-grid-tiny {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  width: 100%;
+  height: 100%;
+}
+
+.cell-num-tiny {
+  background-color: inherit;
+  font-size: 0.5em;
+  font-weight: 600;
+}
