Improve contrast on disabled tiles

--- a/src/colors.css
+++ b/src/colors.css
@@ -2,6 +2,7 @@
   --border-color: #383838;
   --btn-color: #e7e6e6;
   --btn-disabled-color: #d2d2d2;
+  --btn-disabled-fg: #5a5959;
   --btn-active-color: #81d3e7;
   --btn-active-accent: #69bdce;
   --bg-color: #f4f4f4;
