--- a/src/components/game/BoardHolder.css
+++ b/src/components/game/BoardHolder.css
@@ -41,6 +41,7 @@ tr, td {
 
 .cell-btn:disabled {
   background: var(--btn-disabled-color);
+  color: var(--btn-disabled-fg);
 }
 
 .cell-btn.active {
