--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,13 @@ footer {
 }
 
 /* Buttons! */
+
+/* Remove the outline that appears when you tap buttons on an Android phone */
+* {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
+  outline: none !important;
+}
+
 button {
     background: var(--btn-bg);
     border: none;
