Add error highlighting
Very messy implementation – possibly requires rework of more code than
what was added in this commit. Error checking and marking should happen
in *one* function, that will be much cheaper.

However, performance does not seem to be an issue, luckily.

--- a/src/components/game/BoardHolder.css
+++ b/src/components/game/BoardHolder.css
@@ -73,6 +73,22 @@ tr, td {
   height: var(--btn-size);
 }
 
+.cell-btn.wrong {
+  background-color: #e88080;
+}
+
+.cell-btn.wrong:hover {
+  background-color: #e76d6d;
+}
+
+.cell-btn.wrong.active {
+  background-color: #bc76e3;
+}
+
+.cell-btn.wrong.active:hover {
+  background-color: #b65ce7;
+}
+
 /* Grid with extra numbers */
 .cell-grid-small {
   display: grid;
